--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,9 +1,17 @@
 table {
     border-collapse: collapse;
+  
   }
   
 table, th, td {
   border: 1px solid black;
- 
+  border:1px dotted red; 
+  padding: 20px;
 
 }
+table.center {
+  margin-left: 200px; 
+  margin-right:auto;
+}
+
+
