--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,21 @@
-<h3>Shopping List:</h3>
 
-<table>
-    <th>ID</th>
-    <th>Name</th>
-    <th>Color</th>
-    <tr *ngFor="let porducts of Porducts">
-        <td>{{porducts.id}}</td>
-        <td>{{porducts.name}}</td>
-        <td>{{porducts.color}}</td>
-    </tr>            
-</table>
+<div id="shopping-list-table" Align="center">
+    <h3>Shopping List:</h3>
+    <table>
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Color</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let porducts of Porducts">
+                <td>{{porducts.id}}</td>
+                <td>{{porducts.name}}</td>
+                <td>{{porducts.color}}</td>
+            </tr>      
+        </tbody>      
+    </table>
+    <a routerLink ='/product'> + add new item </a>
+</div>
